# bda-course

./: .gitignore  LICENSE  Makefile  README.md  index.html  pyproject.toml  requirements.txt
.doctrees/: environment.pickle  index.doctree
.doctrees/modules/m1/: 01_00_introduction_to_rdd.doctree
.doctrees/modules/m2/: 02_00_introduction_to_dataframe.doctree
.doctrees/prerequisites/: 00_linux.doctree  index.doctree
.github/workflows/: build_site.yaml
binder/: requirements.txt
coursebook/: README.md  _config.yml  _toc.yml  index.md  references.bib
coursebook/modules/m1/: 01_00_introduction_to_rdd.ipynb
coursebook/modules/m2/: 02_00_introduction_to_dataframe.ipynb  sandbox.ipynb
coursebook/prerequisites/: index.md
html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
html/_sources/: index.md
html/_sources/modules/m1/: 01_00_introduction_to_rdd.ipynb
html/_sources/modules/m2/: 02_00_introduction_to_dataframe.ipynb
html/_sources/prerequisites/: 00_linux.md
html/modules/m1/: 01_00_introduction_to_rdd.html
html/modules/m2/: 02_00_introduction_to_dataframe.html
html/prerequisites/: 00_linux.html  index.html
jupyter_execute/modules/m1/: 01_00_introduction_to_rdd.ipynb  01_00_introduction_to_rdd.py
jupyter_execute/modules/m2/: 02_00_introduction_to_dataframe.ipynb  02_00_introduction_to_dataframe.py
