[tool.poetry]
name = "bda-course"
description = "Bid Data Applications Course"
version = "0.1.0"
authors = ["Carlos Montemuino"]
repository = "https://github.com/cmontemuino/bda-course/"
homepage = "https://cmontemuino.github.io/bda-course/"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter-book = "^0.12.1"
pyppeteer = "^1.0.2"
pyspark = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
