[tool.poetry]
name = "bda-course"
description = "Big Data Applications Course"
version = "0.1.0"
authors = ["Carlos Montemuino"]
repository = "https://github.com/cmontemuino/bda-course/"
homepage = "https://cmontemuino.github.io/bda-course/"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter-book = "^0.15.1"
pyppeteer = "^1.0.2"
pyspark = "^3.3.3"
pandas = "^1.5.3"
numpy = "^1.25.2"
jupyterlab = "^3.6.5"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
